feat(web): migrate to Node serverless API; add Mongo/Gemini integration, separate PEI classes, save/load sessions, and evaluation Word generation; reorg files to api/index.js + public/*; update vercel.json and package.json

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
                         <option value="PEI 4">PEI 4</option>
                         <option value="PEI 5">PEI 5</option>
                     </select>
+                    <small>PEI1 séparé, PEI2 séparé, PEI3 séparé, PEI4 séparé (déjà appliqué)</small>
                 </div>
                 <div class="form-group">
                     <label for="matiere">Matière :</label>
