feat(ui): add essai selector and Load from DB; wire to new API endpoints; minor copy updates

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,15 @@
                         <option value="Sciences">Sciences</option>
                         <option value="Mathématiques">Mathématiques</option>
                         <option value="Arts">Arts</option>
-                        <option value="Éducation physique et à la santé">Éducation physique et à la santé</option>
                     </select>
+                </div>
+                <div class="form-group">
+                    <label for="essai">Essai :</label>
+                    <select id="essai">
+                        <option value="1">Essai 1</option>
+                        <option value="2">Essai 2</option>
+                    </select>
+                    <button id="load-existing" class="btn-secondary" style="margin-left:10px; white-space:nowrap">Charger depuis la base</button>
                 </div>
             </div>
 
