refactor: Remplacement complet du système d'évaluation - génération directe sans template
🎯 Objectif : Format exact demandé sans balises ni template externe

✨ Changements majeurs :
- Suppression totale du système de template Word avec balises docxtemplater
- Génération programmatique directe du document Word avec la bibliothèque docx
- Format exact avec 3 tableaux structurés comme spécifié
- Un document séparé par critère (Evaluation_A.docx, Evaluation_B.docx, etc.)
- Tout basé sur l'unité et les critères déjà choisis dans l'unité

📝 Format implémenté (exactement comme demandé) :
- En-tête : Nom et prénom + Classe
- Titre : Évaluation de (matière) (Unité...)
- Critère et énoncé de recherche
- Tableau 1 : Critère | Nom de critère | Note /8
- Tableau 2 : Sous-critères avec colonnes 1-2, 3-4, 5-6, 7-8
- Tableau 3 : Descripteurs de niveaux complets (4 niveaux)
- Exercices : Un par sous-critère avec espaces pour réponses

🔧 Technique :
- Remplacement total de api/generate-eval.js
- Suppression des dépendances pizzip et docxtemplater (obsolètes)
- Utilisation exclusive de la bibliothèque docx
- Extraction automatique des sous-critères depuis les descripteurs
- Génération intelligente des exercices avec Gemini AI (avec fallback)

📦 Simplification :
- ❌ Plus de template Word externe à gérer
- ❌ Plus de balises {#taches}, {/taches}, etc.
- ❌ Plus de variable EVAL_TEMPLATE_URL nécessaire
- ✅ Format garanti et standardisé
- ✅ Un document par critère pour meilleure organisation
- ✅ Tout contrôlé dans le code

📚 Documentation :
- NOUVELLE_IMPLEMENTATION.md : Guide complet de la nouvelle implémentation
- Exemples d'utilisation via API et interface web
- Explication du format exact avec exemples concrets

🎓 Fonctionnalités :
- Support de toutes les matières PEI
- Support de tous les niveaux PEI (1-5)
- Support de tous les critères (A, B, C, D)
- Génération automatique et intelligente des exercices
- Espaces pour réponses dans chaque exercice
- Tableaux avec bordures complètes

✅ 

--- a/public/test-eval.html
+++ b/public/test-eval.html
@@ -199,7 +199,7 @@
                 
                 console.log('Envoi des données:', formData);
                 
-                const response = await fetch('/api/generate-eval-v2', {
+                const response = await fetch('/api/generate-eval', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
